Fix bug where school dropdown got cut off in head

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -99,7 +99,6 @@ input, textarea, select {
 }
 
 .head {
-  overflow: hidden;
   position: relative;
 }
 
@@ -122,7 +121,6 @@ input, textarea, select {
   height: 133px;
 }
 .supplemental {
-  overflow: hidden;
   position: absolute;
   top: 0;
   right: 0;
